--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+  body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -33,6 +33,10 @@ body {
     align-items: center;
 
     height: 100%;
+  }
+
+  p {
+    text-align: justify;
   }
   
   a{
@@ -178,9 +182,10 @@ p{
 
 .window-content2{
     width: 100%;
-    padding: 40px;
+    padding: 40px 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
 }
 
 .content2-img{
@@ -189,7 +194,4 @@ p{
     object-fit: contain;
 }
 
-.content2-p{
-    margin-left: 20px;
-    max-width: calc(1000px - 400px - 80px);
-}
+
